<resources>
    <string name="app_name">NewsApp</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="todo">TODO</string>
    <string name="welcome_user">Welcome User</string>
<!--    <string name="todo">TODO</string>-->
    <string name="share">Share</string>
<!--    <string name="todo">TODO</string>-->
    <string name="next">Next</string>
    <string name="convert">Convert</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="usd">USD</string>
<!--    <string name="usd">USD</string>-->
    <string name="search_ex_tenet">Search ex. Tenet</string>
<!--    <string name="search">Search</string>-->
    <string name="search_movie_and_n_tv_shows_here">Search Movie and \n TV shows here</string>
    <string name="search">Search</string>
<!--    <string name="title">Title</string>-->
    <string name="rating">Rating:-</string>
    <string name="release">Release:-</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="contact">Contact</string>
    <string name="settings">Settings</string>
    <!--    <string name="todo">TODO</string>-->
</resources>
