<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        android:id="@+id/group1">

        <item
            android:id="@+id/nav_about"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_contect"
            android:title="@string/contact" />

        <item
            android:id="@+id/nav_setting"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_feedback"
            android:title="@string/feedback" />

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group2">

        <item
            android:id="@+id/nav_android"
            android:title="@string/android" />

        <item
            android:id="@+id/nav_ios"
            android:title="@string/ios" />

    </group>


</menu>